--- a/OnitamaGameEngine.ipynb
+++ b/OnitamaGameEngine.ipynb
@@ -26,6 +26,7 @@
     "#    06/19 22:24    06/19 01:14    Activated Turn-Based mechanics, Fix Blue Side UI and Visuals, and added card rotation\n",
     "#    06/20 21:00    06/20 22:27    Add Win Conditions and Start Button\n",
     "#    06/21 21:27    06/21 23:15    Fix bugs and update syntax\n",
+    "#    06/22 16:10    06/22 19:33    Fix visuals bugs for show_valid_moves and add how_to_play label\n",
     "from tkinter import *\n",
     "from PIL import ImageTk,Image\n",
     "import random, math"
@@ -68,7 +69,7 @@
     "\n",
     "WHITE = '#fdfefe'\n",
     "DARK_GREEN = '#599974'\n",
-    "LIGHT_GREEN = '#82e0aa'\n",
+    "LIGHT_GREEN = '#c1ff86'\n",
     "\n",
     "#GameState: \n",
     "# 0 : Non-Active, Not-Start\n",
@@ -222,13 +223,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "red_starts_img = ImageTk.PhotoImage(Image.open(\"assets/RedStarts.png\"))\n",
+    "blue_starts_img = ImageTk.PhotoImage(Image.open(\"assets/BlueStarts.png\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "how_to_play_img = ImageTk.PhotoImage(Image.open(\"assets/HowToPlay.png\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "green_square_img = ImageTk.PhotoImage(Image.open(\"assets/GreenSquare.png\"))\n",
     "white_square_img = ImageTk.PhotoImage(Image.open(\"assets/WhiteSquare.png\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,31 +288,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def start_button_clicked():\n",
-    "    global start_game, game_state\n",
+    "    global start_game, game_state, is_red_turn\n",
+    "    if is_red_turn:\n",
+    "        red_card1.config(state=NORMAL)\n",
+    "        red_card2.config(state=NORMAL)\n",
+    "    elif not is_red_turn:\n",
+    "        blue_card1.config(state=NORMAL)\n",
+    "        blue_card2.config(state=NORMAL)\n",
     "    start_game = 1\n",
     "    game_state = 1\n",
-    "    start_button.destroy()"
+    "    start_button.destroy()\n",
+    "    how_to_play_lbl.destroy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "start_button=Button(root, image=start_img, relief=RAISED)\n",
+    "start_button = Button(root, image=start_img, relief=RAISED)\n",
     "start_button.config(command=start_button_clicked)\n",
-    "start_button.place(x=SIDE*3.85, y=SIDE*3.5)"
+    "start_button.place(x=SIDE*7.7, y=SIDE*3.8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,13 +434,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "red_clicked = None\n",
     "blue_clicked = None\n",
-    "current_card = -1\n",
+    "current_card = None\n",
+    "color_starts = 0\n",
     "\n",
     "def red_card_clicked(widget, card_type):\n",
     "    global red_clicked, current_card\n",
@@ -448,41 +476,63 @@
     "red_card1=Button(root, image=card_tk_imgs[deck[0]], relief=RAISED, \n",
     "                 bd=3, bg='black', state=DISABLED)\n",
     "red_card1.config(command=lambda arg=red_card1:red_card_clicked(arg, deck[0]))\n",
-    "red_card1.place(x=SIDE*(2.70), y=SIDE*6.85)\n",
+    "red_card1.place(x=SIDE*2.70, y=SIDE*6.85)\n",
     "\n",
     "red_card2=Button(root, image=card_tk_imgs[deck[1]], relief=RAISED, \n",
     "                 bd=3, bg='black', state=DISABLED)\n",
     "red_card2.config(command=lambda arg=red_card2:red_card_clicked(arg, deck[1]))\n",
-    "red_card2.place(x=SIDE*(5.77), y=SIDE*6.85)\n",
+    "red_card2.place(x=SIDE*5.77, y=SIDE*6.85)\n",
     "\n",
     "blue_card1=Button(root, image=rotated_card_imgs[deck[2]], relief=RAISED, \n",
     "                  bd=3, bg='black', state=DISABLED)\n",
     "blue_card1.config(command=lambda arg=blue_card1:blue_card_clicked(arg, deck[2]))\n",
-    "blue_card1.place(x=SIDE*(2.70), y=SIDE*0.02)\n",
+    "blue_card1.place(x=SIDE*2.70, y=SIDE*0.02)\n",
     "\n",
     "blue_card2=Button(root, image=rotated_card_imgs[deck[3]], relief=RAISED, \n",
     "                  bd=3, bg='black', state=DISABLED)\n",
     "blue_card2.config(command=lambda arg=blue_card2:blue_card_clicked(arg, deck[3]))\n",
-    "blue_card2.place(x=SIDE*(5.77), y=SIDE*0.02)\n",
+    "blue_card2.place(x=SIDE*5.77, y=SIDE*0.02)\n",
     "\n",
     "neutral_card=Label(root, image=card_tk_imgs[deck[4]], bd=0)\n",
-    "neutral_card.config()\n",
-    "neutral_card.place(x=SIDE*(0.35), y=SIDE*3.5)"
+    "neutral_card.place(x=SIDE*0.35, y=SIDE*3.5)\n",
+    "\n",
+    "if deck[4] in range(8):\n",
+    "    is_red_turn = 0\n",
+    "    blue_card1.config(state=NORMAL)\n",
+    "    blue_card2.config(state=NORMAL)\n",
+    "    \n",
+    "    blue_starts_lbl = Label(root, image=blue_starts_img, bd=0)\n",
+    "    blue_starts_lbl.place(x=SIDE*0.35, y=SIDE*2)\n",
+    "    color_starts = 1\n",
+    "    \n",
+    "else:\n",
+    "    is_red_turn = 1\n",
+    "    red_card1.config(state=NORMAL)\n",
+    "    red_card2.config(state=NORMAL)\n",
+    "    \n",
+    "    red_starts_lbl = Label(root, image=red_starts_img, bd=0)\n",
+    "    red_starts_lbl.place(x=SIDE*0.35, y=SIDE*6)\n",
+    "    color_starts = 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "red_card1.config(state=NORMAL)\n",
-    "red_card2.config(state=NORMAL)\n",
-    "\n",
     "def switch_players_turn():\n",
-    "    global rotate_cards\n",
+    "    global rotate_cards, color_starts, current_card\n",
     "    \n",
     "    rotate_cards += 1\n",
+    "    \n",
+    "    current_card = None\n",
+    "    \n",
+    "    red_card1.config(bg='black')\n",
+    "    red_card2.config(bg='black')\n",
+    "    \n",
+    "    blue_card1.config(bg='black')\n",
+    "    blue_card2.config(bg='black')\n",
     "    \n",
     "    if rotate_cards == 2:\n",
     "        red_card1.config(image=card_tk_imgs[deck[1]], command=lambda arg=red_card1:red_card_clicked(arg, deck[1]))\n",
@@ -492,6 +542,11 @@
     "        blue_card2.config(image=rotated_card_imgs[deck[2]], command=lambda arg=blue_card2:blue_card_clicked(arg, deck[2]))\n",
     "        \n",
     "        neutral_card.config(image=card_tk_imgs[deck[0]])\n",
+    "        \n",
+    "        if color_starts == 2:\n",
+    "            red_starts_lbl.destroy()\n",
+    "        if color_starts == 1:\n",
+    "            blue_starts_lbl.destroy()\n",
     "    if rotate_cards == 4:\n",
     "        red_card1.config(image=card_tk_imgs[deck[3]], command=lambda arg=red_card1:red_card_clicked(arg, deck[3]))\n",
     "        red_card2.config(image=card_tk_imgs[deck[2]], command=lambda arg=red_card2:red_card_clicked(arg, deck[2]))\n",
@@ -534,16 +589,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "def found_moves(P, card_type):\n",
     "    global card_moves, color_pawns, Board, is_red_turn\n",
     "    \n",
+    "    if card_type == None:\n",
+    "        return\n",
+    "    \n",
     "    FoundMoves = []\n",
     "    index = P.index\n",
-    "    \n",
     "    for c in card_moves[card_type]:\n",
     "        y = c[0]\n",
     "        x = c[1]\n",
@@ -555,17 +612,17 @@
     "            c = P.col - x\n",
     "        if (r >= 0 and r <= 4 and c >= 0 and c <= 4):\n",
     "            if(Board[r][c] == 0):\n",
-    "                NextMove = Move(index, 0, P.row, P.col, r, c)\n",
-    "                FoundMoves.append(NextMove)\n",
+    "                next_move = Move(index, 0, P.row, P.col, r, c)\n",
+    "                FoundMoves.append(next_move)\n",
     "            elif (Board[r][c]*index < 0):\n",
-    "                NextMove = Move(index, Board[r][c], P.row, P.col, r, c)\n",
-    "                FoundMoves.append(NextMove)\n",
+    "                next_move = Move(index, Board[r][c], P.row, P.col, r, c)\n",
+    "                FoundMoves.append(next_move)\n",
     "    return FoundMoves"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,12 +631,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "def show_valid_moves(image_index, card_type):\n",
     "    global color_pawns, is_red_turn, color_alive, show_move_lbls\n",
+    "    \n",
+    "    if card_type == None:\n",
+    "        return\n",
     "    \n",
     "    for i in range(len(show_move_lbls)):\n",
     "        if show_move_lbls[i].cget('text') == \"G\":\n",
@@ -589,15 +649,26 @@
     "    turn = 1\n",
     "    if (not is_red_turn):\n",
     "        turn = 0\n",
-    "    AllMoves = found_moves(color_pawns[turn][image_index], card_type)\n",
+    "    all_moves = found_moves(color_pawns[turn][image_index], card_type)\n",
     "    \n",
     "    all_end_cols = []\n",
     "    all_end_rows = []\n",
     "    \n",
-    "    for m in AllMoves:\n",
-    "        all_end_cols.append(m.end_col)\n",
-    "        all_end_rows.append(m.end_row)\n",
-    "\n",
+    "    for m in all_moves:\n",
+    "        if turn == 1:\n",
+    "            if Board[m.end_row][m.end_col] == 0:\n",
+    "                all_end_cols.append(m.end_col)\n",
+    "                all_end_rows.append(m.end_row)\n",
+    "            elif Board[m.end_row][m.end_col] < 0:\n",
+    "                index = (Board[m.end_row][m.end_col] * -1) - 1\n",
+    "                color_pawn_lbls[0][index].config(bg=LIGHT_GREEN)\n",
+    "        elif turn == 0:\n",
+    "            if Board[m.end_row][m.end_col] == 0:\n",
+    "                all_end_cols.append(m.end_col)\n",
+    "                all_end_rows.append(m.end_row)\n",
+    "            elif Board[m.end_row][m.end_col] > 0:\n",
+    "                index = Board[m.end_row][m.end_col] - 1\n",
+    "                color_pawn_lbls[1][index].config(bg=LIGHT_GREEN)\n",
     "    for k in range(len(all_end_cols)):\n",
     "        show_move_lbls.append(Label(root, image=green_square_img, bd=0, text=\"G\"))\n",
     "        show_move_lbls[k].place(x=(SIDE*all_end_cols[k])+292, y=(SIDE*all_end_rows[k])+192)"
@@ -605,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,21 +754,20 @@
     "        color_pawn_lbls[end_type][end_index].place(x=-2*SIDE, y=-2*SIDE)\n",
     "    \n",
     "        win_condition(image_type, end_type, end_index, moves.end_row, moves.end_col)\n",
-    "    \n",
+    "\n",
     "    win_condition(image_type, end_type, end_index, moves.end_row, moves.end_col)\n",
     "    is_red_turn = not is_red_turn\n",
-    "    switch_players_turn()\n",
-    "    current_card = -1"
+    "    switch_players_turn()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "def win_condition(image_type, end_type, end_index, end_row, end_col):\n",
-    "    global game_state, color_pawns\n",
+    "    global game_state, color_pawns, start_game\n",
     "    \n",
     "    #THE WAY OF THE STONE: If any pawn captures the enemy's MASTER pawn\n",
     "    if (color_pawns[end_type][end_index].type == 1):\n",
@@ -705,30 +775,34 @@
     "            show_red_wins=Label(root, image=red_wins_img, bd=0)\n",
     "            show_red_wins.place(x=SIDE*(3.85), y=SIDE*3.5)\n",
     "            game_state = 0\n",
+    "            start_game = 0\n",
     "        elif (end_type == 1):\n",
     "            show_blue_wins=Label(root, image=blue_wins_img, bd=0)\n",
     "            show_blue_wins.place(x=SIDE*(3.85), y=SIDE*3.5)\n",
     "            game_state = 0\n",
+    "            start_game = 0\n",
     "    \n",
     "    #THE WAY OF THE STREAM: If any pawn lands on the enemy's shrine\n",
     "    if ((image_type == 1) and (end_row == 0) and (end_col == 2)):\n",
     "        show_red_wins=Label(root, image=red_wins_img, bd=0)\n",
     "        show_red_wins.place(x=SIDE*(3.85), y=SIDE*3.5)\n",
     "        game_state = 0\n",
+    "        start_game = 0\n",
     "    elif ((image_type == 0) and (end_row == 4) and (end_col == 2)):\n",
     "        show_blue_wins=Label(root, image=blue_wins_img, bd=0)\n",
     "        show_blue_wins.place(x=SIDE*(3.85), y=SIDE*3.5)\n",
-    "        game_state = 0"
+    "        game_state = 0\n",
+    "        start_game = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "def mouse_position(event):\n",
-    "    global game_state, start_game\n",
+    "    global game_state, start_game, red_card1, red_card2, blue_card1, blue_card2\n",
     "    \n",
     "    MOUSE_Y = root.winfo_pointery() - root.winfo_rooty()\n",
     "    MOUSE_X = root.winfo_pointerx() - root.winfo_rootx()\n",
@@ -743,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,6 +883,10 @@
     "                    show_move_lbls[l].destroy()\n",
     "            show_move_lbls.clear()\n",
     "            \n",
+    "            for i in range(2):\n",
+    "                for j in range(5):\n",
+    "                    color_pawn_lbls[i][j].config(bg=WHITE)\n",
+    "            \n",
     "            if (Board[r][c]*Board[s_row][s_col] > 0):\n",
     "                image_type = 1\n",
     "                image_index = Board[s_row][s_col] - 1\n",
@@ -857,16 +935,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "how_to_play_lbl = Label(root, image=how_to_play_img, bd=0)\n",
+    "how_to_play_lbl.place(x=SIDE*2.88, y=SIDE*1.92)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if (game_state == 0):\n",
+    "        red_card1.config(state=DISABLED)\n",
+    "        red_card2.config(state=DISABLED)\n",
+    "            \n",
+    "        blue_card1.config(state=DISABLED)\n",
+    "        blue_card2.config(state=DISABLED)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2356746602760mouse_position'"
+       "'2407354101256mouse_position'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 38,
    "metadata": {
     "scrolled": true
    },
@@ -886,6 +988,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Game State =  0\n",
+      "Game State =  0\n",
+      "Game State =  0\n",
       "Game State =  0\n",
       "Game State =  0\n",
       "Game State =  0\n",
